--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             });
 
             // Load the iframe
-            iframe.src = 'https://enx.gdplayertv.to/live-tv/ten-sports-pk?embed=1';
+            iframe.src = 'https://enx.gdplayertv.to/embed/ten-sports-pk/';
 
             // Hide the footer text after 10 seconds
             setTimeout(function () {
