--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             });
 
             // Load the iframe
-            iframe.src = 'https://enx.gdplayertv.to/live-tv/sky-sports-cricket?embed=1';
+            iframe.src = 'https://enx.gdplayertv.to/live-tv/sky-sports-cricket?embed=1&quality=480';
 
             // Hide the footer text after 10 seconds
             setTimeout(function () {
