--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             });
 
             // Load the iframe
-            iframe.src = 'https://enx.gdplayertv.to/embed/sky-sports-cricket';
+            iframe.src = 'https://enx.gdplayertv.to/live-tv/sky-sports-cricket/?embed=1&autoplay=1&mute=1';
 
             // Hide the footer text after 10 seconds
             setTimeout(function () {
@@ -120,7 +120,7 @@
 <body>
 
     <div class="footer-text">
-        <span>Welcome to Talha's Stream, You're Watching Ten-Sport HD Live on talhastream.rf.gd.</span>
+        <span>Welcome to Talha's Stream, You're Watching Ten-Sport HD Live on talhas.stream.000.pe.</span>
     </div>
 
     <!-- Telegram Button -->
