--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
 
     <div class="footer-text">
-        <span>Welcome to Talha's Stream, You're Watching Ten-Sport HD Live on talhas.stream.000.pe.</span>
+        <span>Welcome to Talha's Stream, You're Watching Sky Sports Cricket Live on talhas.stream.000.pe.</span>
     </div>
 
     <!-- Telegram Button -->
