--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             });
 
             // Load the iframe
-            iframe.src = 'https://idx.gdplayertv.to/live-tv/sky-sports-cricket/?embed=1&autoplay=1&mute=1';
+            iframe.src = 'https://idx.gdplayertv.to/live-tv/sky-sports-cricket/?embed=1';
 
             // Hide the footer text after 10 seconds
             setTimeout(function () {
